--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "prettier": "2.8.8",
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
